# Minas-A6B-Control

./: CMakeLists.txt  README.md
src/: ethercat_manager.cpp  ethercat_manager.h  main.cpp  minas_app.cpp  minas_app.h  minas_client.cpp  minas_client.h  motion.cpp  motion.h  time_stamp.cpp  time_stamp.h  xmlManager.cpp  xmlManager.h
